--- a/app/src/main/res/drawable/compass.xml
+++ b/app/src/main/res/drawable/compass.xml
@@ -1,13 +1,23 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="31dp"
-    android:height="31dp"
-    android:viewportWidth="31"
-    android:viewportHeight="31">
-  <group>
-    <clip-path
-        android:pathData="M15.5,1C23.507,1 30,7.493 30,15.5C30,23.507 23.507,30 15.5,30C7.493,30 1,23.507 1,15.5C1,7.493 7.493,1 15.5,1ZM18.4,18.4L7.445,23.556L12.6,12.6L23.556,7.444L18.4,18.4ZM15.5,17.111C16.39,17.111 17.111,16.39 17.111,15.5C17.111,14.61 16.39,13.889 15.5,13.889C14.61,13.889 13.889,14.61 13.889,15.5C13.889,16.39 14.61,17.111 15.5,17.111Z"/>
-    <path
-        android:pathData="M34.833,-3.833H-3.833V34.833H34.833V-3.833Z"
-        android:fillColor="#D9D9D9"/>
-  </group>
+    android:width="48dp"
+    android:height="48dp"
+    android:viewportWidth="48"
+    android:viewportHeight="48">
+  <path
+      android:pathData="M10,4L38,4A6,6 0,0 1,44 10L44,38A6,6 0,0 1,38 44L10,44A6,6 0,0 1,4 38L4,10A6,6 0,0 1,10 4z"
+      android:fillColor="#F8F8F8"/>
+  <path
+      android:pathData="M24,24m-12,0a12,12 0,1 1,24 0a12,12 0,1 1,-24 0"
+      android:fillColor="#ffffff"/>
+  <path
+      android:pathData="M24,24m-11.75,0a11.75,11.75 0,1 1,23.5 0a11.75,11.75 0,1 1,-23.5 0"
+      android:strokeWidth="0.5"
+      android:fillColor="#00000000"
+      android:strokeColor="#ACACAC"/>
+  <path
+      android:pathData="M24.5,12L21,24L24.5,36L28,24L24.5,12Z"
+      android:fillColor="#ACACAC"/>
+  <path
+      android:pathData="M28,24H21L24.5,12L28,24Z"
+      android:fillColor="#AE0707"/>
 </vector>
