--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -15,6 +15,7 @@
         android:layout_marginTop="8dp">
 
         <LinearLayout
+            android:id="@+id/gpsBtn"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_columnWeight="1"
