--- a/app/src/main/res/drawable/bluetooth_btn_background.xml
+++ b/app/src/main/res/drawable/bluetooth_btn_background.xml
@@ -1,6 +1,6 @@
 <!-- button_background.xml -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#2687E1"/>
+    <solid android:color="#FFFFFF"/>
     <stroke
         android:width="1dp"
         android:color="#888888"/>
