--- a/app/src/main/res/layout/activity_get_started.xml
+++ b/app/src/main/res/layout/activity_get_started.xml
@@ -56,7 +56,7 @@
         android:background="@drawable/button_background"
         android:text="GET STARTED"
         android:textAllCaps="true"
-        android:textColor="#888888"
+        android:textColor="#FFFFFF"
         android:textFontWeight="600"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
