--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,67 +2,162 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:layout_marginTop="8dp"
-    android:background="@drawable/border"
+    android:background="@drawable/background"
     android:padding="15dp">
 
-    <ImageView
-        android:id="@+id/ivDogImage"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:src="@drawable/dog"
-        app:layout_constraintEnd_toStartOf="@+id/tvDogName"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+   <LinearLayout
+       android:id="@+id/bluetoothBox"
+       android:layout_width="350dp"
+       android:layout_height="wrap_content"
+       android:orientation="horizontal"
+       android:padding="10dp"
+       android:background="@drawable/bluetooth_btn_background"
+       app:layout_constraintTop_toTopOf="parent"
+       app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintEnd_toEndOf="parent">
+      
+      <ImageView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginStart="10dp"
+          android:src="@drawable/bluetoothimg"/>
+      
+      <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:text="Add New Device"
+          android:layout_gravity="center"
+          android:layout_marginStart="10dp"
+          android:textColor="#2687E1"/>
 
-    <TextView
-        android:id="@+id/tvDogName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:text="@string/txt_dog_name"
-        android:textColor="#6f6f6f"
-        android:textSize="24sp"
-        app:layout_constraintStart_toEndOf="@id/ivDogImage"
-        app:layout_constraintTop_toTopOf="parent" />
+   </LinearLayout>
 
-    <TextView
-        android:id="@+id/tvBatteryLevel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:drawableStart="@drawable/battery"
-        android:text="100%"
-        android:textSize="14sp"
-        app:layout_constraintStart_toEndOf="@id/ivDogImage"
-        app:layout_constraintTop_toBottomOf="@id/tvDogName" />
+   <ImageView
+       android:id="@+id/dogMarker1"
+       android:layout_width="50dp"
+       android:layout_height="50dp"
+       android:layout_centerInParent="true"
+       android:src="@drawable/dog1"
+       android:background="@drawable/marker_background"
+       android:layout_marginTop="150dp"
+       app:layout_constraintTop_toBottomOf="@id/bluetoothBox"
+       app:layout_constraintStart_toStartOf="parent"/>
 
+   <ImageView
+       android:id="@+id/dogMarker3"
+       android:layout_width="50dp"
+       android:layout_height="50dp"
+       android:layout_alignParentRight="true"
+       android:layout_marginEnd="50dp"
+       android:layout_marginTop="100dp"
+       android:src="@drawable/dog2"
+       android:background="@drawable/marker_background"
+       app:layout_constraintTop_toBottomOf="@id/bluetoothBox"
+       app:layout_constraintEnd_toEndOf="parent"/>
 
-    <TextView
-        android:id="@+id/tvStatus"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="25dp"
-        android:text="@string/txt_online"
-        android:textColor="@android:color/holo_green_dark"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@id/tvBatteryLevel"
-        app:layout_constraintStart_toEndOf="@id/tvBatteryLevel"
-        app:layout_constraintTop_toBottomOf="@+id/tvDogName" />
+   <LinearLayout
+       android:id="@+id/bottomNavigation"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:layout_alignParentBottom="true"
+       android:orientation="horizontal"
+       android:padding="10dp"
+       app:layout_constraintBottom_toBottomOf="parent"
+       app:layout_constraintStart_toStartOf="parent">
 
-    <ImageView
-        android:id="@+id/ivEdit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/dropdown__2_"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+      <!-- GPS Icon and Label -->
+      <LinearLayout
+          android:layout_width="0dp"
+          android:layout_height="wrap_content"
+          android:layout_weight="1"
+          android:orientation="vertical"
+          android:gravity="center">
+
+         <ImageButton
+             android:layout_width="40dp"
+             android:layout_height="40dp"
+             android:src="@drawable/gpsicon"
+             android:background="#FFFFFF"/>
+
+         <TextView
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:text="GPS"
+             android:textColor="#FFFFFF"
+             android:textSize="12sp"
+             android:gravity="center" />
+      </LinearLayout>
+
+      <!-- Compass Icon and Label -->
+      <LinearLayout
+          android:layout_width="0dp"
+          android:layout_height="wrap_content"
+          android:layout_weight="1"
+          android:orientation="vertical"
+          android:gravity="center">
+
+         <ImageButton
+             android:layout_width="40dp"
+             android:layout_height="40dp"
+             android:background="#FFFFFF"
+             android:src="@drawable/compasscalibratn"/>
+
+         <TextView
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:text="Compass"
+             android:textColor="#FFFFFF"
+             android:textSize="12sp"
+             android:gravity="center" />
+      </LinearLayout>
+
+      <LinearLayout
+          android:layout_width="0dp"
+          android:layout_height="wrap_content"
+          android:layout_weight="1"
+          android:orientation="vertical"
+          android:gravity="center">
+
+         <ImageButton
+             android:layout_width="40dp"
+             android:layout_height="40dp"
+             android:src="@drawable/training"
+             android:background="#FFFFFF"/>
+
+         <TextView
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:text="Training"
+             android:textColor="#FFFFFF"
+             android:textSize="12sp"
+             android:gravity="center" />
+      </LinearLayout>
+
+      <LinearLayout
+          android:layout_width="0dp"
+          android:layout_height="wrap_content"
+          android:layout_weight="1"
+          android:orientation="vertical"
+          android:gravity="center">
+
+         <ImageButton
+             android:layout_width="40dp"
+             android:layout_height="40dp"
+             android:src="@drawable/settings"
+             android:background="#FFFFFF"/>
+
+         <TextView
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:text="Settings"
+             android:textColor="#FFFFFF"
+             android:textSize="12sp"
+             android:gravity="center" />
+      </LinearLayout>
+
+   </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
