--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -14,6 +14,16 @@
         android:title="COMPASS"
         android:icon="@drawable/compass"/>
 
+    <item
+        android:id="@+id/training"
+        android:title="Training"
+        android:icon="@drawable/training"/>
+
+    <item
+        android:id="@+id/settings"
+        android:title="Settings"
+        android:icon="@drawable/settings"/>
+
 
 
 
