--- a/app/src/main/res/layout/activity_set_language.xml
+++ b/app/src/main/res/layout/activity_set_language.xml
@@ -175,7 +175,7 @@
         android:layout_marginTop="24dp"
         android:text="GET STARTED"
         android:textAllCaps="true"
-        android:textColor="#888888"
+        android:textColor="#FFFFFF"
         android:background="@drawable/button_background"
         android:layout_gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
