--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,163 +1,78 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginTop="8dp"
-    android:background="@drawable/background"
-    android:padding="15dp">
+    android:layout_height="match_parent">
+
+
+   <fragment
+       android:id="@+id/mapFragment"
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       android:name="com.google.android.gms.maps.SupportMapFragment" />
+
 
    <LinearLayout
-       android:id="@+id/bluetoothBox"
+       android:id="@+id/addNewDeviceLayout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
-       android:orientation="horizontal"
-       android:padding="10dp"
        android:background="@drawable/bluetooth_btn_background"
-       app:layout_constraintTop_toTopOf="parent"
-       app:layout_constraintStart_toStartOf="parent"
-       app:layout_constraintEnd_toEndOf="parent">
-      
+       android:layout_alignParentTop="true"
+       android:layout_centerHorizontal="true"
+       android:orientation="horizontal"
+       android:padding="15dp"
+       android:layout_marginTop="16dp">
+
       <ImageView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:layout_marginStart="10dp"
-          android:src="@drawable/bluetoothimg"/>
-      
+          android:src="@drawable/bluetoothimg" />
+
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="Add New Device"
           android:layout_gravity="center"
+          android:textSize="12sp"
           android:layout_marginStart="10dp"
           android:textColor="#2687E1"/>
-
-   </LinearLayout>
-
-   <ImageView
-       android:id="@+id/dogMarker1"
-       android:layout_width="50dp"
-       android:layout_height="50dp"
-       android:layout_centerInParent="true"
-       android:src="@drawable/dog1"
-       android:background="@drawable/marker_background"
-       android:layout_marginTop="150dp"
-       app:layout_constraintTop_toBottomOf="@id/bluetoothBox"
-       app:layout_constraintStart_toStartOf="parent"/>
-
-   <ImageView
-       android:id="@+id/dogMarker3"
-       android:layout_width="50dp"
-       android:layout_height="50dp"
-       android:layout_alignParentRight="true"
-       android:layout_marginEnd="50dp"
-       android:layout_marginTop="100dp"
-       android:src="@drawable/dog2"
-       android:background="@drawable/marker_background"
-       app:layout_constraintTop_toBottomOf="@id/bluetoothBox"
-       app:layout_constraintEnd_toEndOf="parent"/>
-
-   <LinearLayout
-       android:id="@+id/bottomNavigation"
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:layout_alignParentBottom="true"
-       android:orientation="horizontal"
-       android:padding="10dp"
-       app:layout_constraintBottom_toBottomOf="parent"
-       app:layout_constraintStart_toStartOf="parent">
-
-      <!-- GPS Icon and Label -->
-      <LinearLayout
-          android:layout_width="0dp"
-          android:layout_height="wrap_content"
-          android:layout_weight="1"
-          android:orientation="vertical"
-          android:gravity="center">
-
-         <ImageButton
-             android:layout_width="40dp"
-             android:layout_height="40dp"
-             android:src="@drawable/gpsicon"
-             android:background="#FFFFFF"/>
-
-         <TextView
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:text="GPS"
-             android:textColor="#FFFFFF"
-             android:textSize="12sp"
-             android:gravity="center" />
-      </LinearLayout>
-
-      <!-- Compass Icon and Label -->
-      <LinearLayout
-          android:layout_width="0dp"
-          android:layout_height="wrap_content"
-          android:layout_weight="1"
-          android:orientation="vertical"
-          android:gravity="center">
-
-         <ImageButton
-             android:layout_width="40dp"
-             android:layout_height="40dp"
-             android:background="#FFFFFF"
-             android:src="@drawable/compasscalibratn"/>
-
-         <TextView
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:text="Compass"
-             android:textColor="#FFFFFF"
-             android:textSize="12sp"
-             android:gravity="center" />
-      </LinearLayout>
-
-      <LinearLayout
-          android:layout_width="0dp"
-          android:layout_height="wrap_content"
-          android:layout_weight="1"
-          android:orientation="vertical"
-          android:gravity="center">
-
-         <ImageButton
-             android:layout_width="40dp"
-             android:layout_height="40dp"
-             android:src="@drawable/training"
-             android:background="#FFFFFF"/>
-
-         <TextView
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:text="Training"
-             android:textColor="#FFFFFF"
-             android:textSize="12sp"
-             android:gravity="center" />
-      </LinearLayout>
-
-      <LinearLayout
-          android:layout_width="0dp"
-          android:layout_height="wrap_content"
-          android:layout_weight="1"
-          android:orientation="vertical"
-          android:gravity="center">
-
-         <ImageButton
-             android:layout_width="40dp"
-             android:layout_height="40dp"
-             android:src="@drawable/settings"
-             android:background="#FFFFFF"/>
-
-         <TextView
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:text="Settings"
-             android:textColor="#FFFFFF"
-             android:textSize="12sp"
-             android:gravity="center" />
-      </LinearLayout>
-
    </LinearLayout>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+<!--   <LinearLayout-->
+<!--       android:id="@+id/bottomNavigation"-->
+<!--       android:layout_width="match_parent"-->
+<!--       android:layout_height="wrap_content"-->
+<!--       android:layout_alignParentBottom="true"-->
+<!--       android:orientation="horizontal"-->
+<!--       android:background="#FFFFFF"-->
+<!--       android:padding="10dp">-->
+
+<!--      <ImageButton-->
+<!--          android:layout_width="0dp"-->
+<!--          android:layout_height="wrap_content"-->
+<!--          android:layout_weight="1"-->
+<!--          android:src="@drawable/gpsicon"-->
+<!--          android:background="@android:color/transparent" />-->
+
+<!--      <ImageButton-->
+<!--          android:layout_width="0dp"-->
+<!--          android:layout_height="wrap_content"-->
+<!--          android:layout_weight="1"-->
+<!--          android:src="@drawable/compass"-->
+<!--          android:background="@android:color/transparent" />-->
+
+<!--      <ImageButton-->
+<!--          android:layout_width="0dp"-->
+<!--          android:layout_height="wrap_content"-->
+<!--          android:layout_weight="1"-->
+<!--          android:src="@drawable/training"-->
+<!--          android:background="@android:color/transparent" />-->
+
+<!--      <ImageButton-->
+<!--          android:layout_width="0dp"-->
+<!--          android:layout_height="wrap_content"-->
+<!--          android:layout_weight="1"-->
+<!--          android:src="@drawable/settings"-->
+<!--          android:background="@android:color/transparent" />-->
+<!--   </LinearLayout>-->
+
+</RelativeLayout>
