--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -27,7 +27,7 @@
             <ImageView
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:background="#D3D3D3"
+                android:background="@drawable/gpsblueicon"
                 android:layout_gravity="center"/>
 
             <TextView
@@ -54,7 +54,7 @@
             <ImageView
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:background="#D3D3D3"
+                android:background="@drawable/compassblueicon"
                 android:layout_gravity="center"/>
 
             <TextView
@@ -80,7 +80,7 @@
             <ImageView
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:background="#D3D3D3"
+                android:background="@drawable/doglisticon"
                 android:layout_gravity="center"/>
 
             <TextView
@@ -107,7 +107,7 @@
             <ImageView
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:background="#D3D3D3"
+                android:background="@drawable/calenderblueicon"
                 android:layout_gravity="center"/>
 
             <TextView
@@ -134,40 +134,13 @@
             <ImageView
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:background="#D3D3D3"
+                android:background="@drawable/trainingblueicon"
                 android:layout_gravity="center"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="TRAINING"
-                android:textSize="14sp"
-                android:textColor="#000000"
-                android:layout_gravity="center"
-                android:layout_marginTop="8dp"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_columnWeight="1"
-            android:orientation="vertical"
-            android:background="@drawable/border"
-            android:padding="30dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="10dp"
-            android:gravity="center">
-
-            <ImageView
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:background="#D3D3D3"
-                android:layout_gravity="center"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="OFFLINE MAPS"
                 android:textSize="14sp"
                 android:textColor="#000000"
                 android:layout_gravity="center"
@@ -182,13 +155,14 @@
             android:orientation="vertical"
             android:background="@drawable/border"
             android:padding="30dp"
+            android:layout_marginLeft="10dp"
             android:layout_marginTop="20dp"
             android:gravity="center">
 
             <ImageView
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:background="#D3D3D3"
+                android:background="@drawable/settingblueicon"
                 android:layout_gravity="center"/>
 
             <TextView
