--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -68,6 +68,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/dogListBtn"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_columnWeight="1"
@@ -105,6 +106,7 @@
             android:gravity="center">
 
             <ImageView
+                android:id="@+id/calendarimg"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:background="@drawable/calenderblueicon"
