--- a/app/src/main/res/layout/activity_compass.xml
+++ b/app/src/main/res/layout/activity_compass.xml
@@ -1,36 +1,107 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    tools:context=".MainActivity">
+    android:background="@android:color/white">
 
-
-<!--    <ImageView-->
-<!--        android:id="@+id/compassView"-->
-<!--        android:layout_width="250dp"-->
-<!--        android:layout_height="250dp"-->
-<!--        android:src="@drawable/compass"-->
-<!--    app:layout_constraintTop_toTopOf="parent"-->
-<!--    app:layout_constraintStart_toStartOf="parent"-->
-<!--    app:layout_constraintEnd_toEndOf="parent"-->
-<!--    android:layout_marginTop="16dp"/>-->
-
-<!--    <com.example.compass.CustomCompassView-->
-<!--        android:id="@+id/compassView"-->
-<!--        android:layout_width="300dp"-->
-<!--        android:layout_height="300dp"-->
-<!--        android:layout_gravity="center"/>-->
-
-    <com.example.canicomhandheld.CustomCompassView
-        android:id="@+id/compassView"
+    <FrameLayout
+        android:id="@+id/compass_container"
         android:layout_width="300dp"
         android:layout_height="300dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent">
+
+
+        <ImageView
+            android:id="@+id/outer_circle"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/outer_circle"
+            android:contentDescription="Outer Circle" />
+
+
+        <ImageView
+            android:id="@+id/inner_circle"
+            android:layout_width="240dp"
+            android:layout_height="240dp"
+            android:layout_gravity="center"
+            android:src="@drawable/inner_circle"
+            android:contentDescription="Inner Circle" />
+
+
+        <ImageView
+            android:id="@+id/compass_needle"
+            android:layout_width="20dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+            android:src="@drawable/needle"
+            android:contentDescription="Compass Needle" />
+
+        <TextView
+            android:id="@+id/north_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="N"
+            android:textColor="@android:color/holo_orange_dark"
+            android:textSize="16sp"
+            android:layout_gravity="top|center_horizontal"
+            android:layout_marginTop="8dp" />
+
+        <TextView
+            android:id="@+id/south_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="S"
+            android:textColor="@android:color/black"
+            android:textSize="16sp"
+            android:layout_gravity="bottom|center_horizontal"
+            android:layout_marginBottom="8dp" />
+
+        <TextView
+            android:id="@+id/east_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="E"
+            android:textColor="@android:color/black"
+            android:textSize="16sp"
+            android:layout_gravity="center_vertical|end"
+            android:layout_marginEnd="8dp" />
+
+        <TextView
+            android:id="@+id/west_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="W"
+            android:textColor="@android:color/black"
+            android:textSize="16sp"
+            android:layout_gravity="center_vertical|start"
+            android:layout_marginStart="8dp" />
+
+
+        <TextView
+            android:id="@+id/md_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="MD"
+            android:textColor="@android:color/holo_orange_dark"
+            android:textSize="12sp"
+            android:layout_gravity="center|start"
+            android:layout_marginStart="16dp" />
+
+        <TextView
+            android:id="@+id/gd_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="GD"
+            android:textColor="@android:color/holo_green_dark"
+            android:textSize="12sp"
+            android:layout_gravity="center|end"
+            android:layout_marginEnd="16dp" />
+
+    </FrameLayout>
 
 
     <LinearLayout
@@ -39,59 +110,59 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center"
-        app:layout_constraintTop_toBottomOf="@id/compassView"
+        app:layout_constraintTop_toBottomOf="@id/compass_container"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="16dp">
 
-        <!-- Elevation -->
+
         <TextView
             android:id="@+id/elevation_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/elevationicon"
-        android:drawablePadding="8dp"
-        android:text="500m"
-        android:textColor="@color/black"
-        android:textSize="14sp"/>
+            android:drawablePadding="8dp"
+            android:text="500m"
+            android:textColor="@color/black"
+            android:textSize="14sp"/>
 
-        <!-- Divider -->
+
         <View
             android:layout_width="1dp"
             android:layout_height="match_parent"
             android:background="@color/gray"
             android:layout_marginHorizontal="16dp"/>
 
-        <!-- Distance -->
+
         <TextView
             android:id="@+id/distance_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/distanceicon"
-        android:drawablePadding="8dp"
-        android:text="500m"
-        android:textColor="@color/black"
-        android:textSize="14sp"/>
+            android:drawablePadding="8dp"
+            android:text="500m"
+            android:textColor="@color/black"
+            android:textSize="14sp"/>
 
-        <!-- Divider -->
+
         <View
             android:layout_width="1dp"
             android:layout_height="match_parent"
             android:background="@color/gray"
             android:layout_marginHorizontal="16dp"/>
 
-        <!-- Speed -->
+
         <TextView
             android:id="@+id/speed_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-        android:drawablePadding="8dp"
-        android:text="2km/h"
-        android:textColor="@color/black"
-        android:textSize="14sp"/>
+            android:drawablePadding="8dp"
+            android:text="2km/h"
+            android:textColor="@color/black"
+            android:textSize="14sp"/>
     </LinearLayout>
 
-    <!-- List of Dogs -->
+
     <TextView
         android:id="@+id/dogs_list_title"
         android:layout_width="wrap_content"
@@ -114,5 +185,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginTop="8dp"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
