--- a/app/src/main/res/layout/activity_gps_location.xml
+++ b/app/src/main/res/layout/activity_gps_location.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!-- Google Map Fragment -->
+
     <fragment
         android:id="@+id/map"
         android:layout_width="match_parent"
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <!-- Example avatars -->
+
             <ImageView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -36,11 +36,11 @@
                 android:layout_margin="8dp"
                 android:src="@drawable/avatar2" />
 
-            <!-- Add more ImageViews as needed -->
+
         </LinearLayout>
     </HorizontalScrollView>
 
-    <!-- Floating Action Button Container (Right Side) -->
+
     <LinearLayout
         android:id="@+id/fabContainer"
         android:layout_width="wrap_content"
@@ -53,6 +53,7 @@
         android:layout_centerVertical="true">
 
         <ImageButton
+            android:id="@+id/calendarimg"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:src="@drawable/calender"
@@ -60,6 +61,7 @@
             android:contentDescription="Layers" />
 
         <ImageButton
+            android:id="@+id/compassimg"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:src="@drawable/compass"
