--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,13 +1,7 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-
-   <fragment
-       android:id="@+id/mapFragment"
-       android:layout_width="match_parent"
-       android:layout_height="match_parent"
-       android:name="com.google.android.gms.maps.SupportMapFragment" />
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
    <LinearLayout
@@ -19,7 +13,10 @@
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:padding="15dp"
-       android:layout_marginTop="16dp">
+       android:layout_marginTop="16dp"
+       app:layout_constraintTop_toTopOf="parent"
+       app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintEnd_toEndOf="parent">
 
       <ImageView
           android:layout_width="wrap_content"
@@ -35,6 +32,19 @@
           android:layout_marginStart="10dp"
           android:textColor="#2687E1"/>
    </LinearLayout>
+
+
+   <fragment
+       android:id="@+id/mapFragment"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:name="com.google.android.gms.maps.SupportMapFragment"
+       android:layout_marginTop="5dp"
+       app:layout_constraintTop_toBottomOf="@id/addNewDeviceLayout"
+       app:layout_constraintStart_toStartOf="parent"/>
+
+
+
 
 
 <!--   <LinearLayout-->
@@ -75,4 +85,4 @@
 <!--          android:background="@android:color/transparent" />-->
 <!--   </LinearLayout>-->
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
