--- a/app/src/main/res/layout/item_dog.xml
+++ b/app/src/main/res/layout/item_dog.xml
@@ -6,8 +6,7 @@
     android:orientation="horizontal"
     android:padding="8dp"
     android:background="@drawable/item_background"
-    android:elevation="2dp"
-    android:marginBottom="8dp">
+    android:elevation="2dp">
 
     <ImageView
         android:id="@+id/ivDogImage"
