--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -34,7 +34,7 @@
    </LinearLayout>
 
 
-   <fragment
+   <androidx.fragment.app.FragmentContainerView
        android:id="@+id/mapFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
