--- a/app/src/main/res/layout/activity_set_language.xml
+++ b/app/src/main/res/layout/activity_set_language.xml
@@ -47,6 +47,7 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:background="#D3D3D3"
+                android:src="@drawable/eng"
                 android:layout_gravity="center"/>
 
             <TextView
@@ -73,6 +74,7 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:background="#D3D3D3"
+                android:src="@drawable/fr"
                 android:layout_gravity="center"/>
 
             <TextView
@@ -126,6 +128,7 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:background="#D3D3D3"
+                android:src="@drawable/es"
                 android:layout_gravity="center"/>
 
             <TextView
@@ -152,6 +155,7 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:background="#D3D3D3"
+                android:src="@drawable/it"
                 android:layout_gravity="center"/>
 
             <TextView
